<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PictureActivity">


    <include
        android:id="@+id/toolBar"
        layout="@layout/appbar"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemTextAppearanceActive="@color/black"
        android:layout_gravity="bottom"
        android:layout_alignBottom="@id/toolBar"
        app:menu="@menu/bottom_navigation_menu" />


    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/toolBar"
        android:layout_alignTop="@id/toolBar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPreview"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="-4dp"
        android:hint="@string/description" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_marginStart="126dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="283dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/submit" />

</RelativeLayout>